```mermaid
erDiagram
    USERS {
        int id PK
        string username
        string password
        string email
        string role
    }
    
    STUDENT {
        int id PK
        int user_id FK
        varchar full_name
        varchar course
        varchar department
        float cgpa
        text skills
    }
    
    FACULTY {
        int id PK
        int user_id FK
        varchar name
        varchar department
    }
    
    HIRING_MANAGER {
        int id PK
        int user_id FK
        varchar name
        varchar company
    }
    
    INTERNSHIP {
        int id PK
        varchar title
        text description
        varchar company
        varchar location
        text requirements
        int posted_by FK
        datetime created_at
    }
    
    APPLICATION {
        int id PK
        int student_id FK
        int internship_id FK
        varchar status
        tinyint faculty_approval
        datetime applied_at
    }
    
    USERS ||--o{ STUDENT : has
    USERS ||--o{ FACULTY : has
    USERS ||--o{ HIRING_MANAGER : has
    HIRING_MANAGER ||--o{ INTERNSHIP : posts
    FACULTY ||--o{ INTERNSHIP : may_post
    STUDENT ||--o{ APPLICATION : submits
    INTERNSHIP ||--o{ APPLICATION : receives
```